hello-service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-ext
spec:
  selector:
    app: hello-j-ext
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
